# jdbg

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  ROADMAP.md  build.rs  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
sidecar/jdi/: build.gradle  settings.gradle
sidecar/jdi/src/main/java/dev/jdbg/sidecar/: ExpressionEvaluator.java  FrameConnection.java  JdiService.java  Json.java  RpcException.java  SidecarMain.java  ValueRenderer.java
sidecar/jdi/src/test/java/dev/jdbg/sidecar/: SidecarSelfTest.java
skills/jdbg/: SKILL.md
skills/jdbg/cli/: SKILL.md
skills/jdbg/mcp/: SKILL.md
src/: backend.rs  cli.rs  client.rs  error.rs  jdkpath.rs  lib.rs  main.rs  output.rs  path_args.rs  protocol.rs  registry.rs  session.rs  session_tests.rs  setup.rs  tui.rs  update.rs  update_sidecar.rs
src/daemon/: handler.rs  manager.rs  mod.rs
src/jdb/: mod.rs  parser.rs  parser_tests.rs  process.rs  reader.rs
src/jdi/: codec.rs  lifecycle.rs  local.rs  mod.rs  protocol.rs  session.rs  transport.rs
src/mcp/: jsonrpc.rs  mod.rs  rmcp_server.rs  tools.rs
src/protocol/: mod.rs  result.rs  wire.rs
tests/: server_integration.rs
tests/fixtures/java/: AdvancedCollectionsTest.java  AsyncBreakpointTest.java  BlockingEvalTest.java  CollectionTest.java  ConcurrentThreadStopTest.java  EvalMutationTest.java  ExternalTriggerBreakpointTest.java  JdiLaunchTest.java  Loop.java  Main.java  MethodEventTest.java  StepIsolationTest.java  StructuredInspectTest.java  ThreadTest.java  Throw.java  WatchTest.java  WatchTwiceTest.java
tests/fixtures/jdb/: 00_initial_prompt.txt  01_bp_method.txt  02_bp_line.txt  03_run_hit_line3.txt  04_locals_sparse.txt  05_cont_hit_line9.txt  06_locals_full.txt  07_where.txt  08_print_int.txt  09_print_str.txt  10_threads.txt  11_list.txt  12_step.txt  13_cont_exit.txt
