[package]
name = "java-agent-debugger"
version = "0.1.0"
edition = "2024"

[lib]
name = "java_agent_debugger"
path = "src/lib.rs"

[[bin]]
name = "jdbg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
interprocess = "2"
jiff = "0.2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
