[package]
name = "java-agent-debugger"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/PieceOfFall/jdbg"
description = "Cross-platform CLI debugger for Java, wrapping jdb with prompt-aware control"
license = "Apache-2.0"

[lib]
name = "java_agent_debugger"
path = "src/lib.rs"

[[bin]]
name = "jdbg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
interprocess = "2"
jiff = "0.2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
